model/unpackaged/objects/SIP_Execution__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Execution_Log__c</fullName>
        <label>Execution Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>IF(
  NOT(ISBLANK(Task__c)), Task__r.Task_Name__c,
  IF(
    NOT(ISBLANK(Task_Flow__c)),  Task_Flow__r.Flow_Name__c,
    &apos;Unknown&apos;
  )
)</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Running</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aborted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished with Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished with Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished with Warnings</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Success_Count__c</fullName>
        <label>Success Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Flow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Flow</label>
        <referenceTo>SIP_Task_Flow__c</referenceTo>
        <relationshipName>SIP_Flow_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>SIP_Task__c</referenceTo>
        <relationshipName>SIP_Flow_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF(
  NOT(ISBLANK(Task__c)), &apos;Task&apos;,
  IF(
    NOT(ISBLANK(Task_Flow__c)), &apos;Task Flow&apos;,
    &apos;Unknown&apos;
  )
)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warning_Count__c</fullName>
        <label>Warning Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SIP Execution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Name__c</columns>
        <columns>Status__c</columns>
        <columns>Task__c</columns>
        <columns>Task_Flow__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Success_Count__c</columns>
        <columns>Warning_Count__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EXC{00000000}</displayFormat>
        <label>SIP Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIP_Execution</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>